--- a/Spotify/css/styles.css
+++ b/Spotify/css/styles.css
@@ -1,41 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root{
-    --primary-black: #0000;
+    --primary-black: #191414;
     --primary-white: #ffff;
     --primary-gray: rgba(255,255,255,0.2)
 }
 
 body{
-    background-color:black;
+    background-color:var(--primary-black);
     color: var(--primary-white) ;
     display: flex;
-    align-items: center;
     flex-direction: column;
+    font-family: "Roboto" , sans-serif;
 }
 
 .search_bar{
     background-color: white;
     display: flex;
+    justify-content: flex-start;
+    gap: 10px;
     width: 240px;
-    height: 16px;
+    height: 20px;
     padding: 8px;
-    border-radius: 15px;
-    margin-top: 16px;
+    border-radius: 100px;
+    margin-top: 24px;
     cursor: pointer;
-    
+    margin-left:  304px;
+    color: var(--primary-black);
 }
 
-.content{
-    margin-top: 32px;
+.search_icon{
+    width: 15px;
+}
+
+.search_input{
+    width: 220px;
+    height: 20px;
 }
 
 .search_title{
     font-size: 32px;
-    font-weight: 700
-
-}
-
-.artists_cards_list{
-    margin-top: 16px;
+    font-weight: 700;
+    align-self: flex-start;
 }
 
 .artist_card{
@@ -47,6 +53,21 @@ body{
     flex-direction: column;
     padding: 16px 8px;
     border-radius: 3px;
+}
+
+.close_artist{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.close_icon{
+    width: 10px;
 }
 
 .artist_profile {
@@ -71,10 +92,24 @@ body{
     padding-right: 20px; */
 }
 
+
 .artists_cards_list{
     display: flex;
-    gap: 16px;
+    gap: 24px;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 242px;
+    overflow-y: scroll;
 }
+.content{
+    display: flex;
+    flex-direction: column;
+    margin-top: 32px;
+    gap: 15px;
+    width: 80%;
+    margin: 32px auto;
+}
+
 
 .artist_name{
     margin-top: 12px;
@@ -82,4 +117,5 @@ body{
 
 .artist_subtitle{
     margin-top: 8px;
+    font-weight: 100;
 }
